Changed the HTML for the site again

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,22 @@
 <html>
-    <head>
-        <title>Elinan blogi</title>
-    </head>
-    <body>
-      <h1>Welcome to Elina's blog!</h1>
-        <p>Hi there!</p>
-        <p>It <em>works</em>!</p>
-        <p>I'm practising coding with Django Girls, check out their <a href="https://djangogirls.org">website</a><p>
-    </body>
+<head>
+    <title>Elina's blog</title>
+</head>
+<body>
+    <div>
+        <h1><a href="/">Django Girls Blog</a></h1>
+    </div>
+
+    <div>
+        <p>published: 14.06.2014, 12:14</p>
+        <h2><a href="">My first post</a></h2>
+        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+    </div>
+
+    <div>
+        <p>published: 14.06.2014, 12:14</p>
+        <h2><a href="">My second post</a></h2>
+        <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+    </div>
+</body>
 </html>
